<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Quiz2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/myApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorNew2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/lionLogo"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="17dp"
                    android:paddingLeft="18dp"
                    android:paddingStart="18dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/fiftyk"
                    tools:ignore="RtlSymmetry" />

                <TextView
                    android:id="@+id/website"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="19dp"
                    android:layout_marginStart="19dp"
                    android:layout_marginTop="41.5dp"
                    android:autoLink="web"
                    android:gravity="center_vertical"
                    android:text="@string/web"
                    android:textColor="#FFF"
                    android:textColorLink="#FFF"
                    android:textSize="13sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal"
                android:paddingTop="15dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#FFF"
                    android:padding="5dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/fiftylions" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal">

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorNew2"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/Q1Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="26dp"
                        android:text="@string/Q1Text"
                        android:textColor="#000"
                        android:textSize="18sp" />

                    <RadioGroup
                        android:id="@+id/QuestionOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/q1-1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/q1" />

                        <RadioButton
                            android:id="@+id/q1-2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q2" />

                    </RadioGroup>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/Q2Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="22dp"
                        android:text="@string/Q2Text"
                        android:textColor="#000"
                        android:textSize="18sp" />

                    <RadioGroup
                        android:id="@+id/QuestionTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/q2-1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/q3" />

                        <RadioButton
                            android:id="@+id/q2-2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q4" />

                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/Q3Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="22dp"
                        android:text="@string/Q3Text"
                        android:textColor="#000"
                        android:textSize="18sp" />

                    <RadioGroup
                        android:id="@+id/QuestionThree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/q3-1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/q5" />

                        <RadioButton
                            android:id="@+id/q3-2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q6" />

                    </RadioGroup>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/Q4Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="22dp"
                        android:text="@string/Q4Text"
                        android:textColor="#000"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/aSuccessor"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginLeft="32dp"
                        android:layout_marginStart="32dp"
                        android:gravity="right"
                        android:hint="Type answer here" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/Q5Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="22dp"
                        android:text="@string/Q5Text"
                        android:textColor="#000"
                        android:textSize="18sp" />


                    <CheckBox
                        android:id="@+id/cBoxAction"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/q9" />

                    <CheckBox
                        android:id="@+id/cBoxCourage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/q10" />


                    <CheckBox
                        android:id="@+id/cBoxAbove"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/q101" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/Q6Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="22dp"
                        android:text="@string/Q6Text"
                        android:textColor="#000"
                        android:textSize="18sp" />

                    <RadioGroup
                        android:id="@+id/QuestionSix"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/q6-1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/q11" />

                        <RadioButton
                            android:id="@+id/q6-2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q12" />

                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/Q7Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="22dp"
                        android:text="@string/Q7Text"
                        android:textColor="#000"
                        android:textSize="18sp" />

                    <RadioGroup
                        android:id="@+id/QuestionSeven"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/q7-1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/q13" />

                        <RadioButton
                            android:id="@+id/q7-2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q14" />

                    </RadioGroup>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/Q8Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="22dp"
                        android:text="@string/Q8Text"
                        android:textColor="#000"
                        android:textSize="18sp" />

                    <RadioGroup
                        android:id="@+id/QuestionEight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="32dp"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="8dp"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/q15"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/q15" />

                        <RadioButton
                            android:id="@+id/q16"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q16" />

                    </RadioGroup>

                </LinearLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorNew2"
                android:paddingLeft="110dp"
                android:paddingStart="110dp"
                android:paddingTop="20dp"
                tools:ignore="RtlSymmetry">


                <Button
                    android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="25dp"
                    android:background="@color/colorPrimary"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp"
                    android:text="SUBMIT"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp" />


            </RelativeLayout>


        </LinearLayout>


    </ScrollView>


</android.support.constraint.ConstraintLayout>